# NeatGraphics

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt
resources/: frag.glsl  vertex.glsl
src/: ArrayBuffer.cpp  ArrayBuffer.hpp  CMakeLists.txt  GLDebug.hpp  ShaderProgram.cpp  ShaderProgram.hpp  main.cpp  mat.hpp  vec.cpp  vec.hpp
src/gl/: ArrayBuffer.cpp  ArrayBuffer.hpp  GLDebug.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp
src/math/: mat.hpp  transform.hpp  vec.cpp  vec.hpp
src/util/: NonCopyable.hpp
